--- a/client/app.css
+++ b/client/app.css
@@ -1,4 +1,4 @@
-
+/*Home(main) page and Nav styling*/
 
 .display-1 {
 	display:flex;
@@ -8,21 +8,121 @@
 
 .h2 {
 	color:white;
-
 }
 
 body {
-
 	background-color:white;
 }
+
+.logo {
+	display:flex;
+	justify-content:center;
+}
+
+.info {
+	display:flex;
+	align-items:center;
+
+}
+/*change to capital letter and added border, padding and animation*/
 .login {
+
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
-     background-color: white;
-    
+        background-color: white;
+        border: 2px solid #c2f0f0;
+        border-radius: 5px;
+        padding: 15px 32px;
+        text-align: center;
+        text-transform: capitalize;
+        letter-spacing: 1px;  
 }
 
 .login:hover {
-    background-color: #95dee3; /* Green */
-    
+    background-color: #95dee3; /* hover highlight color */   
+}
+/*business info alignment and height*/
+.section { 
+	display:flex;
+	align-items:center;
+	height:370px;   
+
+}
+
+.flexbox-container{
+    display: -ms-flex;
+    display: -webkit-flex;
+     
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    margin:auto;
+ 
+    
+
+}
+
+
+.data-well {
+    flex: 2 1 auto;
+	max-width: 1000px;
+    min-width: 600px;
+	padding:20px;
+    max-height: 1000px;
+    border: 2px solid #c2f0f0;
+	background-color: white;
+    
+   
+        
+}
+.flex-item {
+    flex: 2 1 auto;
+    align-items:center;
+
+}
+
+@media (min-width: 48 em) {
+    .flexbox-container {
+     
+    align-items: center;
+    justify-content: center;
+        -webkit-flex-direction: row;
+        flex-direction: row;
+        
+        
+    }
+}
+.section.h4 {
+    color: #004d99;
+}
+
+/*Scroll feature styling*/
+#back2Top {
+    width: 40px;
+    line-height: 40px;
+    overflow: hidden;
+    z-index: 999;
+    display: none;
+    cursor: pointer;
+        -moz-transform: rotate(270deg);
+        -webkit-transform: rotate(270deg);
+        -o-transform: rotate(270deg);
+        -ms-transform: rotate(270deg);
+        transform: rotate(270deg);
+            position: fixed;
+            bottom: 180px;
+            right: 1%;
+            background-color: #DDD;
+            color: #555;
+            text-align: center;
+            font-size: 30px;
+            text-decoration: none;
+}
+
+#back2Top:hover {
+    background-color: #DDF;
+    color: #000;
 }
