--- a/client/components/poll.html
+++ b/client/components/poll.html
@@ -1,43 +1,37 @@
 
-
-
-
-
-
+<!-- This section displays the layout of all the polls -->
 
 <template name="poll">
 
-
-
 	<div class="poll">
-	
-
-	<div class="panel panel-default">
-		<div class="panel-heading">
+		<!-- Wrapped into bootstrap panels -->
+		<div class="panel panel-default">
+			<!-- poll heading including business info -->
+			<div class="panel-heading">
 			<h4>{{name}}</h4>
 			{{description}}
-			<address>{{ address }}</address>
+				<div class="Address">{{ address }}</div>
+			</div>
+
+					<!-- poll body including the question button and votes -->
+					<div class="poll panel-body" data-id="{{ _id}}">
+
+					<h4>{{ question }}</h4>
+					<!--allows vote to go to the correct question-->
+					{{ #each indexedArray choices }}
+						<button id="ntnSave" class="vote btn btn-primary btn-block " data-id="{{_index }}"> 
+
+							<span class="votes badge pull-right"> votes: {{ votes }} </span>
+							<span class="text">{{ text }}</span> 
+
+						</button>
+					<!-- ends the iteration of displaying each choices -->
+					{{ /each }}
+
+					</div>
+
 		</div>
-	<div class="poll panel-body" data-id="{{ _id}}">
-		<h4>{{ question }}</h4>
-<!--allows vote to go to the correct question-->
-
-		{{ #each indexedArray choices }}
-		<a href="#" class="vote btn btn-primary btn-block" data-id="{{_index }}"> 
-			<span class="votes badge pull-right"> votes: {{ votes }} </span>
-			<span class="text">{{ text }}</span>
-
-		</a>
-
-		{{ /each }}
-
-
-   
- 
-</div>
-</div>
 
 	</div>
-
 
 </template>
