--- a/client/app.css
+++ b/client/app.css
@@ -17,6 +17,7 @@ body {
 .logo {
 	display:flex;
 	justify-content:center;
+    margin: auto;
 }
 
 .info {
@@ -24,6 +25,9 @@ body {
 	align-items:center;
 
 }
+
+
+
 /*change to capital letter and added border, padding and animation*/
 .login {
 
@@ -36,7 +40,10 @@ body {
         text-align: center;
         text-transform: capitalize;
         letter-spacing: 1px;  
+        max-width: 400px;
+        list-style: none;
 }
+
 
 .login:hover {
     background-color: #95dee3; /* hover highlight color */   
@@ -84,17 +91,7 @@ body {
 
 }
 
-@media (min-width: 48 em) {
-    .flexbox-container {
-     
-    align-items: center;
-    justify-content: center;
-        -webkit-flex-direction: row;
-        flex-direction: row;
-        
-        
-    }
-}
+
 .section.h4 {
     color: #004d99;
 }
@@ -114,7 +111,7 @@ body {
         transform: rotate(270deg);
             position: fixed;
             bottom: 180px;
-            right: 1%;
+            right: .05%;
             background-color: #DDD;
             color: #555;
             text-align: center;
@@ -125,4 +122,98 @@ body {
 #back2Top:hover {
     background-color: #DDF;
     color: #000;
+}
+
+@media only screen and (max-device-width: 60em) {
+
+    .section { 
+    display:flex;
+    align-items:center;
+    max-width:300px;
+    height:450px;   
+
+}
+
+#back2Top {
+
+    }
+
+    .flexbox-container {
+     max-width: 300px;
+    align-items: center;
+    justify-content: center;
+        -webkit-flex-direction: row;
+        flex-direction: row;      
+    }
+
+    .data-well {
+    
+    max-width: 400px;
+    min-width: 300px;
+    margin-left:5%;
+    
+        
+}
+
+.jumbotron {
+   
+    margin-right: 2%;
+    max-width: 300px;
+    margin-left:3%;
+
+
+}
+
+
+.logo {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin: auto;
+    max-width: 230px;
+    max-height: 170px;
+}
+
+.info {
+    font-size: 30px;    
+    font-weight: normal;    
+    line-height: 95%;
+    text-align: center;
+}
+ .lead {
+
+    font-size: 18px;    
+    font-weight: normal;    
+    line-height: 98%;
+    text-align: center;
+
+ }
+
+ .login {
+
+    
+        padding: 5px 10px;
+        text-align: center;
+       
+}
+
+.nav {
+   
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+    margin-left: 10px;
+    
+}
+
+
+
+
+
+
+
+ 
+
+
+
+
 }
