--- a/client/components/poll.html
+++ b/client/components/poll.html
@@ -6,18 +6,19 @@
 		<!-- Wrapped into bootsrap panels -->
 		<div class="panel panel-default">
 			<!-- the heading includes business info -->
-			<div class="panel-heading"><h4>{{name}}</h4>{{description}}
-				<div class="Address">{{address}}
-				</div>
+			<div class="panel-heading "><h4 class="name">{{name}}</h4>
+				<div class="description">{{description}}</div>
+				<h5 class="address">{{address}}
+				</h5>
 			</div>
 			<!-- poll body includes question button and votes  -->
 			<div class="poll panel-body" data-id="{{_id}}">
-				<h4>{{question}}</h4>
+				<h4 class="question">{{question}}</h4>
 				<!-- allows vote to go to correct question -->
 				{{#each indexedArray choices}}
 				<button class="vote btn btn-primary btn-block " data-id="{{_index}}"> 
-				<span class="votes badge pull-right"> votes:{{votes}}</span>
-				<span class="text">{{text}}</span> 
+				<div class="votes badge pull-right"> votes:{{votes}}</div>
+				<div class="text">{{text}}</div> 
 			</button>
 			{{/each}}
 			<!-- ends iteration of each choices -->
