--- a/client/components/home.html
+++ b/client/components/home.html
@@ -19,24 +19,26 @@
 
 				<section class="section">
 					<div class="flexbox-container">
-						<div class="data-well"><div class="row">
+						<div class="data-well">
+
+							<div class="row">
 							<div class="col-md-2 col-lg-2">
-								<div class="flex-item"><h4>Get Started</h4><p>Create an account.</p>
+								<div class="flex-item"><h4 class="z">Get Started</h4><p>Create an account.</p>
 								</div>
 							</div>
 
 								<div class=" col-md-4 col-lg-4">
-									<div class="flex-item"><h4>New Residents</h4> <p>See which businesses poll well in 3 categories: <br>Recommendation, Customer Service, or Price. <br>Then collect their contact information.</p>
+									<div class="flex-item"><h4 class="z">New Residents</h4> <p>See which businesses poll well in 3 categories: <br>Recommendation, Customer Service, or Price. <br>Then collect their contact information.</p>
 									</div>
 								</div>
 
 								<div class="col-md-4 col-lg-3">
-									<div class="flex-item"> <h4>For Customers</h4> <p>Log into an account. <br>Review services by voting.</p>
+									<div class="flex-item"> <h4 class="z">For Customers</h4> <p>Log into an account. <br>Review services by voting.</p>
 									</div>
 								</div>
 
 								<div class="col-md-3 col-lg-3">
-									<div class="flex-item"><h4> Have a Question?</h4> <p>Contact us at customerservice@NRHub.com</p>
+									<div class="flex-item"><h4 class="z"> Have a Question?</h4> <p>Contact us at customerservice@NRHub.com</p>
 									</div>
 								</div>
 							</div>
