--- a/client/components/poll.css
+++ b/client/components/poll.css
@@ -48,7 +48,7 @@ letter-spacing:1px;
 
 .name {
 	font-size:19px;
-font-weight:700;
+font-weight:500;
 line-height:95%;
 letter-spacing:1px;
 }
@@ -61,9 +61,15 @@ letter-spacing:1px;
 }
 .question {
 	
-	font-size:25px;
+	display:flex;
+	align-items:center;
+	justify-content:center;
 
 
+}
+
+.x-navbar {
+	overflow:auto;
 }
 
 
