--- a/client/components/poll.html
+++ b/client/components/poll.html
@@ -6,7 +6,7 @@
 		<!-- Wrapped into bootsrap panels -->
 		<div class="panel panel-default">
 			<!-- the heading includes business info -->
-			<div class="panel-heading "><h4 class="name">{{name}}</h4>
+			<div class="panel-heading " style="background-color:#DFDBE5;"><h4 class="name">{{name}}</h4>
 				<div class="description">{{description}}</div>
 				<h5 class="address">{{address}}
 				</h5>
