--- a/client/app.css
+++ b/client/app.css
@@ -50,6 +50,7 @@ display:flex;
 align-items:center;
 height:370px;
 
+
 }
 
 .flexbox-container {
@@ -63,12 +64,13 @@ align-items:center;
 justify-content:center;
 margin:auto;
 
+
 }
 
 .data-well {
 flex:2 1 auto;
 max-width:1000px;
-min-width:600px;
+margin:auto;
 padding:20px;
 max-height:1000px;
 border:10px double #c2f0f0;
