--- a/client/components/home.html
+++ b/client/components/home.html
@@ -1,7 +1,9 @@
 
-<template name="home"> <body>{{>nav}}
+<template name="home"> <body>
+	<div class= "bcolor">
+		{{>nav}}
 
-	<div class="jumbotron jumbotron-fluid" style="background: linear-gradient(to top right, #003366 36%, #009999 78%) !important">
+	<div class="jumbotron jumbotron-fluid" style="background: transparent!important">
 		<div class="container">
 			<div class="col-sm-6 col-md-4 col-lg-4">
 			<div class="logo"> <img class="img-responsive" src="/images/Assetlogo.png" alt="New Resident Hub"/>
@@ -44,7 +46,8 @@
 							</div>
 						</div>
 					</div>
-				</section>
+		                 </section> 
+	</div>
 			</body></template>
 
 
