--- a/client/components/home.html
+++ b/client/components/home.html
@@ -1,15 +1,14 @@
-
 <template name="home"> <body>
-	<div class= "bcolor">
-		{{>nav}}
+	<div class= "bcolor">{{>nav}}
 
-	<div class="jumbotron jumbotron-fluid" style="background: transparent!important">
-		<div class="container">
-			<div class="col-sm-6 col-md-4 col-lg-4">
+	
+		<div class="container-fluid">
+			<div class="row">
+			<div class="col-lg-4">
 			<div class="logo"> <img class="img-responsive" src="/images/Assetlogo.png" alt="New Resident Hub"/>
 			</div>
 		</div>
-			<div class="col-sm-6 col-md-6 col-lg-8"> 
+			<div class="col-lg-8"> 
 				<div class="top"><br><h2 class="info" style="color:#e6e6e6">New to the area or looking for a highly rated service?</h2> <br><p class="lead" style="color:#cccccc">Our community reviews local businesses all in one spot.<br>Compare the reviews and choose a service with confidence.</p>
 				</div>
 			</div>
@@ -19,37 +18,38 @@
 
 
 
+				
 				<section class="section">
 					<div class="flexbox-container">
+						
 						<div class="data-well">
 
+
 							<div class="row">
-							<div class="col-md-2 col-lg-2">
+							<div class="col-lg-2">
 								<div class="flex-item"><h4 class="z">Get Started</h4><p>Create an account.</p>
 								</div>
 							</div>
 
-								<div class=" col-md-4 col-lg-4">
+								<div class="col-lg-4">
 									<div class="flex-item"><h4 class="z">New Residents</h4> <p>See which businesses poll well in 3 categories: <br>Recommendation, Customer Service, or Price. <br>Then collect their contact information.</p>
 									</div>
 								</div>
 
-								<div class="col-md-4 col-lg-3">
+								<div class="col-lg-3">
 									<div class="flex-item"> <h4 class="z">For Customers</h4> <p>Log into an account. <br>Review services by voting.</p>
 									</div>
 								</div>
 
-								<div class="col-md-3 col-lg-3">
+								<div class="col-lg-3">
 									<div class="flex-item"><h4 class="z"> Have a Question?</h4> <p>Contact us at customerservice@NRHub.com</p>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-		                 </section> 
-	</div>
+				</section></div>
 			</body></template>
-
 
 
 
