--- a/client/components/home.html
+++ b/client/components/home.html
@@ -10,7 +10,7 @@
 			</div>
 		</div>
 			<div class="col-lg-8"> 
-				<div class="top"><br><h2 class="info" style="color:#e6e6e6">New to the area or looking for a highly rated service?</h2> <br><p class="lead" style="color:#cccccc">Our community reviews local businesses all in one spot.<br>Compare the reviews and choose a service with confidence.</p>
+				<div class="top"><br><h2 class="info" style="color:#e6e6e6">New to the area or looking for a highly rated service?</h2> <br><p class="lead" style="color:#cccccc">Our community reviews local businesses<span class="mobile-ignore"> all in one spot</span>.<br>Compare reviews and choose a service with confidence.</p>
 					<a class="view" href="#below"><button class="btn-warning">View Polls</button></a>
 
 
@@ -38,22 +38,22 @@
 
 							<div class="row">
 							<div class="col-lg-3" >
-								<div class="flex-item-a"><h4 class="z"><i class="fa fa-compass" aria-hidden="true">&nbsp;Get Started</i></h4><p>Create an account.</p>
+								<div class="flex-item"><h4 class="z"><i class="fa fa-compass" aria-hidden="true">&nbsp;Get Started</i></h4><p>Create an account.</p>
 								</div>
 							</div>
 
 								<div class="col-lg-3">
-									<div class="flex-item-c"><h4 class="z"><i class="fa fa-user-plus" aria-hidden="true">&nbsp;For New Residents</i></h4> <p>View local businesses.<br> Compare based on Recommendation, Customer Service, or Price. <br>Then collect their contact information.</p>
+									<div class="flex-item"><h4 class="z"><i class="fa fa-user-plus" aria-hidden="true">&nbsp;For New Residents</i></h4> <p>View local businesses.<br> Compare based on Recommendation, Customer Service, or Price. <br>Then collect their contact information.</p>
 									</div>
 								</div>
 
 								<div class="col-lg-3">
-									<div class="flex-item-b"> <h4 class="z"><i class="fa fa-user" aria-hidden="true">&nbsp;For Customers</i></h4> <p>Log into an account. <br>Review services by voting.</p>
+									<div class="flex-item"> <h4 class="z"><i class="fa fa-user" aria-hidden="true">&nbsp;For Customers</i></h4> <p>Log into an account. <br>Review services by voting.</p>
 									</div>
 								</div>
 
 								<div class="col-lg-3">
-									<div class="flex-item-b"><h4 class="z"> <i class="fa fa-question-circle" aria-hidden="true">&nbsp;Have a Question?</i></h4> <p>Reach out to us at contact@NRHub.com</p>
+									<div class="flex-item"><h4 class="z"> <i class="fa fa-question-circle" aria-hidden="true">&nbsp;Have a Question?</i></h4> <p>Reach out to us at contact@NRHub.com</p>
 									</div>
 								</div>
 							</div>
