Update headear,font and background styles

--- a/client/components/Nav.html
+++ b/client/components/Nav.html
@@ -2,6 +2,7 @@
       <ul class="nav nav-bar" id="mynav">
         <!--provides the account componenet of the site with log in button-->
           <li class="navbar-right center-block"><h3 class="login">{{>loginButtons}}</h3></li> 
+          <li class="navbar-left center-block"><h3 class="pagetitle text-info">New Resident Hub</h3></li> 
        </ul>   
 </template>
 
