--- a/client/components/home.html
+++ b/client/components/home.html
@@ -1,7 +1,8 @@
 
 <template name="home"> <body>
+	<div class="herohead">
 	<div class= "bcolor">{{>nav}}
-
+</div>
 	
 		<div class="container-fluid">
 			<div class="row">
