--- a/client/components/poll.css
+++ b/client/components/poll.css
@@ -9,13 +9,15 @@
 	max-width: 1250px;
 	padding-right: 8%;
 	padding-left: 8%;
+	background-color: transparent;
+	height: auto;
 
 
 
 	
 }
 .poll {
-	background-color:#DFDBE5;
+	background-color: transparent;
 
 
 }
@@ -23,6 +25,7 @@
 	font-size:20px;
 font-weight:400;
 line-height:95%;
+
 
 }
 .votes {
@@ -38,7 +41,7 @@ letter-spacing:1px;
 .panel {
 	display:inline-block;
 	width:100%;
-	
+	background-color:#DFDBE5;
 	border:10px solid #fff;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -54,10 +57,12 @@ letter-spacing:1px;
 }
 
 .name {
-	font-size:19px;
+	font-size:28px;
 font-weight:500;
 line-height:95%;
 letter-spacing:1px;
+
+font-family: 'Sriracha', cursive;
 }
 .description {
 	font-size:15px;
@@ -67,7 +72,7 @@ letter-spacing:1px;
 
 }
 .question {
-	
+	color: 	#303030;
 	display:flex;
 	align-items:center;
 	justify-content:center;
