--- a/client/components/home.html
+++ b/client/components/home.html
@@ -37,24 +37,24 @@
 						<div class="data-well">
 
 
-							<div class="row">
-							<div class="col-lg-3" >
-								<div class="flex-item"><h4 class="z"><i class="fa fa-compass" aria-hidden="true">&nbsp;Get Started</i></h4><p>Create an account.</p>
+							<div class="row guide">
+							<div class="col-flex col-sm" >
+								<div class="flex-item"><i class="fa fa-compass fa-4x" aria-hidden="true"></i><h3 class="z text-left">Getting Started</h3><p class="center">Create an account with a username and e-mail by clicking the login-in button at the top of the page.</p>
 								</div>
 							</div>
 
-								<div class="col-lg-3">
-									<div class="flex-item"><h4 class="z"><i class="fa fa-user-plus" aria-hidden="true">&nbsp;For New Residents</i></h4> <p>View local businesses.<br> Compare based on Recommendation, Customer Service, or Price. <br>Then collect their contact information.</p>
+								<div class="col-flex col-sm">
+									<div class="flex-item"><i class="fa fa-user-plus fa-4x" aria-hidden="true"></i><h3 class="z text-left">For New Residents</h3> <p>View local businesses.<br> Compare based on Recommendation, Customer Service, or Price. <br>Collect contact information.</p>
 									</div>
 								</div>
 
-								<div class="col-lg-3">
-									<div class="flex-item"> <h4 class="z"><i class="fa fa-user" aria-hidden="true">&nbsp;For Customers</i></h4> <p>Log into an account. <br>Review services by voting.</p>
+								<div class="col-flex col-sm">
+									<div class="flex-item"><i class="fa fa-user fa-4x" aria-hidden="true"></i> <h3 class="z text-left">For Customers</h3> <p>To review the services on the site login-in and pick the choice that best describes the experience.</p>
 									</div>
 								</div>
 
-								<div class="col-lg-3">
-									<div class="flex-item"><h4 class="z"> <i class="fa fa-question-circle" aria-hidden="true">&nbsp;Have a Question?</i></h4> <p>Reach out to us at contact@NRHub.com</p>
+								<div class="col-flex col-sm">
+									<div class="flex-item"><i class="fa fa-question-circle fa-4x" aria-hidden="true"></i><h3 class="z text-left">Have a Question?</h3> <p>Reach out to us at contact@NRHub.com</p>
 									</div>
 								</div>
 							</div>
