--- a/client/components/poll.css
+++ b/client/components/poll.css
@@ -1,129 +1,112 @@
-
 /*Poll section styling*/
 
-
-
 .polls {
-
-	margin:auto;
+	margin: auto;
 	max-width: 1250px;
 	padding-right: 8%;
 	padding-left: 8%;
 	background-color: transparent;
 	height: auto;
-
-
-
-	
+}
+.poll:nth-child(3n+0) {
+	background-color:transparent;
 }
 .poll {
-	background-color: transparent;
-
-
+	background-color: #DFDBE5;
 }
+
 .text {
-	font-size:20px;
-font-weight:400;
-line-height:95%;
-
-
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 95%;
 }
+
 .votes {
-	font-size:15px;
-font-weight:700;
-line-height:95%;
-text-transform: capitalize;
-letter-spacing:1px;
-
+	font-size: 15px;
+	font-weight: 700;
+	line-height: 95%;
+	text-transform: capitalize;
+	letter-spacing: 1px;
 }
-
 
 .panel {
-	display:inline-block;
-	width:100%;
-	background-color:#DFDBE5;
-	border:10px solid #fff;
+	display: inline-block;
+	width: 100%;
+	background-color: #DFDBE5;
+	
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
 .address {
-	 text-transform: uppercase;
-	 font-size:15px;
-font-weight:400;
-line-height:1.4em;
-
-letter-spacing:1px;
+	text-transform: uppercase;
+	font-size: 15px;
+	font-weight: 400;
+	line-height: 1.4em;
+	letter-spacing: 1px;
 }
 
 .name {
-	font-size:28px;
-font-weight:500;
-line-height:95%;
-letter-spacing:1px;
-
-font-family: 'Sriracha', cursive;
+	font-size: 28px;
+	font-weight: 500;
+	line-height: 95%;
+	letter-spacing: 1px;
+	font-family: 'Sriracha', cursive;
 }
+
 .description {
-	font-size:15px;
-font-weight:400;
-line-height:95%;
-letter-spacing:1px;
-
+	font-size: 15px;
+	font-weight: 400;
+	line-height: 95%;
+	letter-spacing: 1px;
 }
+
 .question {
-	color: 	#303030;
-	display:flex;
-	align-items:center;
-	justify-content:center;
-
-
-
+	color: #303030;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 30px;
 }
+
+
 
 .x-navbar {
-	overflow:auto;
+	overflow: auto;
 }
 
-
-
-@media only screen and (max-device-width: 480px)  {
-
-.polls {
+@media only screen and (max-width: 480px) {
+	.polls {
+		width: auto;
+		padding-right: 4%;
+		padding-left: 4%;
+		margin: 0;
+	}
+	.text {
+		font-size: 14px;
+		font-weight: 400;
+	
+	}
+	.votes {
+		font-size: 14px;
+		font-weight: 400;
+		line-height: 95%;
+	}
+    .question {
+		margin-left: 20px;
+	}
 
 	
-	max-width: 400px;
-	padding-right: 8%;
-	padding-left: 8%;
-	margin: 0;
-}
-.text {
-	font-size:14px;
-font-weight:400;
-
-
-}
-.votes {
-	font-size:14px;
-font-weight:400;
-line-height:95%;
-
-}
-.description {
-	font-size:15px;
-font-weight:400;
-line-height:115%;
-letter-spacing:1px;
-
-}
-.address {
-	 
-	 font-size:15px;
-font-weight:400;
-line-height:125%;
-
-letter-spacing:1px;
-}
-
-
+	
+	.description {
+		font-size: 15px;
+		font-weight: 400;
+		line-height: 115%;
+		letter-spacing: 1px;
 	}
+	.address {
+		font-size: 15px;
+		font-weight: 400;
+		line-height: 125%;
+		letter-spacing: 1px;
+	}
+}
